update the generation of the dataset

--- a/skills-context-matching/skills-context-matching.ipynb
+++ b/skills-context-matching/skills-context-matching.ipynb
@@ -36,9 +36,11 @@
     "unique_skills = df['skills'].unique()\n",
     "\n",
     "print(unique_skills)\n",
+    "try:\n",
+    "    # Convert the unique skills to a DataFrame\n",
+    "    unique_skills_df = pd.DataFrame(unique_skills, columns=['skills'])\n",
+    "except\n",
     "\n",
-    "# Convert the unique skills to a DataFrame\n",
-    "unique_skills_df = pd.DataFrame(unique_skills, columns=['skills'])\n",
     "\n",
     "# Write the DataFrame to a CSV file\n",
     "unique_skills_df.to_csv('unique_skills.csv', index=False)"
