adding the service and finish the preperation

--- a/skills-context-matching/skills_context_matching.ipynb
+++ b/skills-context-matching/skills_context_matching.ipynb
@@ -51,7 +51,7 @@
       "source": [
         "# !pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118\n",
         "# !pip install transformers torch\n",
-        "!pip install spacy"
+        "# !pip install spacy"
       ]
     },
     {
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,7 +84,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_19670/2921292934.py:2: DeprecationWarning: \n",
+            "/tmp/ipykernel_138804/2921292934.py:2: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 5,
       "metadata": {
         "id": "IRU4-WU7jwj7"
       },
@@ -141,7 +141,7 @@
       "source": [
         "skills_context_directory = './raw-data/'\n",
         "\n",
-        "skills_dataset = skills_context_directory +  'skills.csv'\n",
+        "skills_dataset = skills_context_directory +  'extracted_skills.txt'\n",
         "context_dataset = skills_context_directory + 'contexts.csv'\n",
         "\n",
         "unique_skills_dataset = 'unique_skills.csv'\n",
@@ -169,47 +169,47 @@
       ],
       "source": [
         "\n",
-        "# Check if the unique_skills.csv file exists\n",
-        "if os.path.exists(unique_skills_dataset):\n",
-        "    # Load the existing unique skills dataset\n",
-        "    unique_skills_df = pd.read_csv(unique_skills_dataset)\n",
-        "    unique_skills_set = set(unique_skills_df['Skill'])\n",
-        "else:\n",
-        "    # Read the skills dataset\n",
-        "    df = pd.read_csv(skills_dataset)\n",
+        "# # Check if the unique_skills.csv file exists\n",
+        "# if os.path.exists(unique_skills_dataset):\n",
+        "#     # Load the existing unique skills dataset\n",
+        "#     unique_skills_df = pd.read_csv(unique_skills_dataset)\n",
+        "#     unique_skills_set = set(unique_skills_df['Skill'])\n",
+        "# else:\n",
+        "#     # Read the skills dataset\n",
+        "#     df = pd.read_csv(skills_dataset)\n",
         "\n",
-        "    # Initialize an empty set to store unique skills\n",
-        "    unique_skills_set = set()\n",
+        "#     # Initialize an empty set to store unique skills\n",
+        "#     unique_skills_set = set()\n",
         "\n",
-        "    # Load the pre-trained spaCy model\n",
-        "    nlp = spacy.load('en_core_web_lg')\n",
+        "#     # Load the pre-trained spaCy model\n",
+        "#     nlp = spacy.load('en_core_web_lg')\n",
         "\n",
-        "    # Iterate over each row in the skills dataset\n",
-        "    for skills_str in df['skills'].unique():\n",
-        "        if pd.isna(skills_str):\n",
-        "            continue\n",
+        "#     # Iterate over each row in the skills dataset\n",
+        "#     for skills_str in df['skills'].unique():\n",
+        "#         if pd.isna(skills_str):\n",
+        "#             continue\n",
         "\n",
-        "        # Split skills based on commas and convert to lowercase\n",
-        "        skills_list = [skill.strip().lower() for skill in skills_str.split(',')]\n",
+        "#         # Split skills based on commas and convert to lowercase\n",
+        "#         skills_list = [skill.strip().lower() for skill in skills_str.split(',')]\n",
         "\n",
-        "        # Add each unique skill to the set\n",
-        "        for skill in skills_list:\n",
-        "            if skill not in unique_skills_set:\n",
-        "                unique_skills_set.add(skill)\n",
+        "#         # Add each unique skill to the set\n",
+        "#         for skill in skills_list:\n",
+        "#             if skill not in unique_skills_set:\n",
+        "#                 unique_skills_set.add(skill)\n",
         "\n",
-        "    # Convert the set of unique skills to a DataFrame\n",
-        "    unique_skills_df = pd.DataFrame({'Skill': list(unique_skills_set)})\n",
+        "#     # Convert the set of unique skills to a DataFrame\n",
+        "#     unique_skills_df = pd.DataFrame({'Skill': list(unique_skills_set)})\n",
         "\n",
-        "    # Save the unique skills DataFrame to a CSV file\n",
-        "    unique_skills_df.to_csv(unique_skills_dataset, index=False)\n",
+        "#     # Save the unique skills DataFrame to a CSV file\n",
+        "#     unique_skills_df.to_csv(unique_skills_dataset, index=False)\n",
         "\n",
-        "# Print the total number of unique skills\n",
-        "print(\"Total Unique Skills:\", len(unique_skills_set))"
+        "# # Print the total number of unique skills\n",
+        "# print(\"Total Unique Skills:\", len(unique_skills_set))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -222,15 +222,37 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Total Unique Skills: 26405\n"
+            "Total Unique Skills: 51\n"
           ]
         }
       ],
-      "source": []
+      "source": [
+        "\n",
+        "# Check if the unique_skills.csv file exists\n",
+        "if os.path.exists(unique_skills_dataset):\n",
+        "    # Load the existing unique skills dataset\n",
+        "    unique_skills_df = pd.read_csv(unique_skills_dataset)\n",
+        "    unique_skills_set = set(unique_skills_df['skills'])\n",
+        "else:\n",
+        "    with open(skills_dataset, 'r') as file:\n",
+        "        skills = file.readlines()\n",
+        "\n",
+        "    # Remove leading and trailing whitespaces and filter empty lines\n",
+        "    skills = [skill.strip() for skill in skills if skill.strip()]\n",
+        "\n",
+        "    # Create a DataFrame from the list of skills\n",
+        "    unique_skills_set = pd.DataFrame({'skills': skills})\n",
+        "\n",
+        "    # Save the unique skills DataFrame to a CSV file\n",
+        "    unique_skills_set.to_csv(unique_skills_dataset, index=False)\n",
+        "\n",
+        "# Print the total number of unique skills\n",
+        "print(\"Total Unique Skills:\", len(unique_skills_set))"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -285,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 18,
       "metadata": {
         "id": "ngYZjEevwFxO"
       },
@@ -296,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -304,13 +326,92 @@
         "id": "r4zvoc8ijwtn",
         "outputId": "89560c5f-e0dd-44ef-89e8-425abfd5c869"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "waer is here\n",
+            "Context: patterns in software design, Matched Skills: 3\n",
+            "Context: backbone, Matched Skills: 0\n",
+            "Context: intersection with regular languages, Matched Skills: 2\n",
+            "Context: interconversion for prefix, postfix & infix notations, Matched Skills: 5\n",
+            "Context: playfair cipher, Matched Skills: 0\n",
+            "Context: debugging tools, Matched Skills: 0\n",
+            "Context: microprocessor mcqs, Matched Skills: 0\n",
+            "Context: pig latin, Matched Skills: 0\n",
+            "Context: ggplot2 – 3, Matched Skills: 0\n",
+            "Context: packages – 1, Matched Skills: 0\n",
+            "Context: polybius square, Matched Skills: 0\n",
+            "Context: ambiguous grammar, Matched Skills: 0\n",
+            "Context: quicksort – 3, Matched Skills: 0\n",
+            "Context: stooge sort, Matched Skills: 0\n",
+            "Context: harmonic sequences, Matched Skills: 0\n",
+            "Context: transaction management, Matched Skills: 22\n",
+            "Context: logic-pro, Matched Skills: 0\n",
+            "Context: perl script characteristics, Matched Skills: 0\n",
+            "Context: replication processes-1, Matched Skills: 8\n",
+            "Context: application’s domain classes, Matched Skills: 0\n",
+            "Context: collection iterator pattern, Matched Skills: 2\n",
+            "Context: longest palindromic subsequence, Matched Skills: 0\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/tmp/ipykernel_138804/1591378738.py:27: UserWarning: [W008] Evaluating Doc.similarity based on empty vectors.\n",
+            "  similarity = context_doc.similarity(skill_doc)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Context: matlab, Matched Skills: 0\n",
+            "Context: pointers operation – 1, Matched Skills: 0\n",
+            "Context: search an element in an array using recursion – 2, Matched Skills: 0\n",
+            "Context: mapreduce job-1, Matched Skills: 0\n",
+            "Context: number of functions, Matched Skills: 0\n",
+            "Context: bipartite graph, Matched Skills: 0\n",
+            "Context: exploratory graphs, Matched Skills: 1\n",
+            "Context: polynomial and modular arithmetic- ii, Matched Skills: 0\n",
+            "Context: transport layer security and https, Matched Skills: 8\n",
+            "Context: triggers, Matched Skills: 0\n",
+            "Context: bayes theorem, Matched Skills: 0\n",
+            "Context: software engineering design methods, Matched Skills: 20\n",
+            "Context: number of relations, Matched Skills: 0\n",
+            "Context: cross validation, Matched Skills: 0\n",
+            "Context: integers and algorithms, Matched Skills: 2\n",
+            "Context: construction and yield of a parse tree, Matched Skills: 0\n",
+            "Context: equivalence classes and partitions, Matched Skills: 9\n",
+            "Context: exponential search, Matched Skills: 2\n",
+            "Context: basics – 4, Matched Skills: 0\n",
+            "Context: conversions among representations, Matched Skills: 0\n",
+            "Context: introsort, Matched Skills: 0\n",
+            "Context: data management, Matched Skills: 21\n",
+            "Context: here, Matched Skills: 0\n",
+            "Context: byte stream, Matched Skills: 0\n",
+            "Context: hdfs maintenance, Matched Skills: 5\n",
+            "Context: views mapping and handling, Matched Skills: 1\n",
+            "Context: managing web flows, Matched Skills: 0\n",
+            "Context: basics – 2, Matched Skills: 0\n",
+            "Context: cloud computing mcqs, Matched Skills: 2\n",
+            "Context: simulation – 2, Matched Skills: 0\n",
+            "Context: secure shell(ssh) – i, Matched Skills: 0\n"
+          ]
+        }
+      ],
       "source": [
         "import concurrent.futures\n",
         "import json\n",
+        "import spacy\n",
+        "import pandas as pd\n",
         "\n",
         "# Load pre-trained spaCy model with word embeddings\n",
         "nlp = spacy.load('en_core_web_lg')\n",
+        "\n",
+        "context_skills_mapping = {}\n",
         "\n",
         "# Function to process each context row and find related skills\n",
         "def process_context(context_row):\n",
@@ -344,7 +445,7 @@
         "with concurrent.futures.ThreadPoolExecutor(max_workers=5) as executor:\n",
         "    # Submit each context row to the executor for processing\n",
         "    future_to_row = {executor.submit(process_context, context_row): context_row for context_row in unique_contexts_df.itertuples()}\n",
-        "\n",
+        "    print(\"waer is here\")\n",
         "    # Iterate over completed futures\n",
         "    for future in concurrent.futures.as_completed(future_to_row):\n",
         "        context_name, context_skills, num_matched_skills = future.result()\n",
@@ -353,29 +454,60 @@
         "\n",
         "        # Write to JSON file after each step\n",
         "        with open(\"context_skills_mapping.json\", \"w\") as f:\n",
-        "            json.dump(context_skills_mapping, f)\n",
-        "\n",
-        "# Example of how to access skills related to a specific context\n",
-        "context_name = \"context1\"\n",
-        "related_skills = context_skills_mapping.get(context_name, [])\n",
-        "print(f\"Skills related to {context_name}: {related_skills}\")\n"
+        "            json.dump(context_skills_mapping, f)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "GKiJiXK8jwwS"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Top matching contexts:\n",
+            "Context: jquery, Match Count: 3\n",
+            "Context: sql server mcqs, Match Count: 2\n",
+            "Context: node.js, Match Count: 2\n",
+            "Context: mysql, Match Count: 2\n",
+            "Context: unix mcqs, Match Count: 1\n",
+            "Context: javascript mcqs, Match Count: 1\n",
+            "Context: express.js, Match Count: 1\n"
+          ]
+        }
+      ],
       "source": [
-        "# Print the first few context-skill relationships for verification\n",
-        "num_contexts_to_print = 5  # Adjust as needed\n",
+        "import json\n",
         "\n",
-        "for context_name, related_skills in list(context_skills_mapping.items())[:num_contexts_to_print]:\n",
-        "    print(f\"Context: {context_name}\")\n",
-        "    print(f\"Related Skills: {related_skills}\")\n",
-        "    print(\"------\")\n"
+        "# Load the context-skill mapping from the JSON file\n",
+        "with open(\"context_skills_mapping.json\", \"r\") as f:\n",
+        "    context_skills_mapping = json.load(f)\n",
+        "\n",
+        "def get_top_matching_contexts(skills_array, n=7):\n",
+        "    # Create a dictionary to store the count of matched skills for each context\n",
+        "    context_match_count = {}\n",
+        "\n",
+        "    # Iterate over each context in the mapping\n",
+        "    for context, matched_skills in context_skills_mapping.items():\n",
+        "        # Count the number of matched skills for the current context\n",
+        "        match_count = sum(1 for skill in skills_array if skill in matched_skills)\n",
+        "        context_match_count[context] = match_count\n",
+        "\n",
+        "    # Sort the contexts based on the number of matched skills\n",
+        "    sorted_contexts = sorted(context_match_count.items(), key=lambda x: x[1], reverse=True)\n",
+        "\n",
+        "    # Return the top n matching contexts\n",
+        "    return sorted_contexts[:n]\n",
+        "\n",
+        "# Example usage:\n",
+        "skills_array = ['backend development', 'Node.js', 'Express.js', 'JavaScript', 'MySQL']  # Replace with your array of skills\n",
+        "top_matching_contexts = get_top_matching_contexts(skills_array)\n",
+        "print(\"Top matching contexts:\")\n",
+        "for context, match_count in top_matching_contexts:\n",
+        "    print(f\"Context: {context}, Match Count: {match_count}\")\n"
       ]
     },
     {
